fix: fixing laout shift and columns styles

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -44,7 +44,7 @@
   --heading-font-size-xs: 18px;
 
   /* nav height */
-  --nav-height: 64px;
+  --nav-height: 314px;
 
 }
 
